--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Build
         run: |
-          docker build -t ghcr.io/utaustin-laits/wordpress-base:${{ github.event.inputs.version }} ${{ github.event.inputs.version }}
+          docker build -t ghcr.io/utaustin-laits/wordpress-base:${{ github.event.inputs.version }} versions/${{ github.event.inputs.version }}
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           docker push ghcr.io/utaustin-laits/wordpress-base:${{ github.event.inputs.version }}
