--- a/sample/docker-compose.yml
+++ b/sample/docker-compose.yml
@@ -1,9 +1,13 @@
-version: '3.4'
+version: '3.6'
 
 services:
   web:
     build: .
-#    read_only: true
+    read_only: true
+    tmpfs:
+      - /run/lock
+      - /run/apache2
+      - /tmp
     environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST:-mywp.localhost.utexas.edu}
       - WORDPRESS_DB_HOST=db
@@ -25,9 +29,6 @@ services:
       - "${HTTP_EXPOSED_PORT:-8088}:80"
     volumes:
       - wpuploads:/var/www/html/wp-content/uploads
-#      - wpvarrun:/var/run
-#      - wprun:/run
-#      - wptmp:/tmp
   db:
     image: mysql:8
     environment:
@@ -47,6 +48,3 @@ services:
 volumes:
   dbdata:
   wpuploads:
-  wpvarrun:
-  wprun:
-  wptmp:
