partial fix of htaccess/file-perms issues

--- a/sample/docker-compose.yml
+++ b/sample/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - "${HTTP_EXPOSED_PORT:-8088}:80"
     volumes:
-      - wpuploads:/var/www/html/wp-content/uploads
+      - ./wp-content/uploads:/var/www/html/wp-content/uploads
   db:
     image: mysql:8
     environment:
@@ -47,4 +47,3 @@ services:
 
 volumes:
   dbdata:
-  wpuploads:
