--- a/sample/docker-compose.yml
+++ b/sample/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
       - WORDPRESS_DEBUG=1
+      - WORDPRESS_DEBUG_LOG=1
+      - WORDPRESS_DEBG_DISPLAY=0
     #      - WORDPRESS_AUTH_KEY=
     #      - WORDPRESS_SECURE_AUTH_KEY=
     #      - WORDPRESS_LOGGED_IN_KEY=
